fix small alignment issue

--- a/app/assets/stylesheets/sections/_sight_read.scss
+++ b/app/assets/stylesheets/sections/_sight_read.scss
@@ -60,6 +60,7 @@
       justify-content: space-around;
       width: 100%;
       .control-item {
+        width: 1rem;
         margin: 1rem 0;
       }
       #player {
@@ -68,7 +69,7 @@
         width: 90%;
       }
     }
-    
+
     #loader-gif {
       display: none;
       min-width: 90px;
